Fix container styles on mobile

--- a/static/assets/css/main.css
+++ b/static/assets/css/main.css
@@ -1097,10 +1097,12 @@ a > .comment__profile__username {
 }
 
 .container--small {
-    width: 25rem;
+    width: 100%;
+    max-width: 25rem;
 }
 .container--medium {
-    width: 35rem;
+    width: 100%;
+    max-width: 35rem;
 }
 
 /*********\
